first page stood up w API populating rows of notes

--- a/client/src/styles/_color-palette.scss
+++ b/client/src/styles/_color-palette.scss
@@ -1,6 +1,6 @@
 $primaryColor: #E00045;
-$primaryColorDark: #FF5570;
-$primaryColorLight: #A6001F;
+$primaryColorDark: #A6001F;
+$primaryColorLight: #ffb5c1;
 
 
 $secondaryColor: #424242;
