--- a/client/src/styles/global/_buttons.scss
+++ b/client/src/styles/global/_buttons.scss
@@ -5,9 +5,12 @@
   border-radius: 5px;
   text-align: center;
   width: 75%;
-  padding: 10px;
+  padding: 20px 0;
   margin-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
   transition: .5s;
+  font-size: 1.5rem;
   &:hover {
     cursor: pointer;
     transition: .5s;
