style added to modal form buttons

--- a/client/src/styles/_color-palette.scss
+++ b/client/src/styles/_color-palette.scss
@@ -2,6 +2,8 @@ $primaryColor: #E00045;
 $primaryColorDark: #A6001F;
 $primaryColorLight: #ffb5c1;
 
+$primaryColorText: rgba(255, 255, 255, 0.95);
+
 
 $secondaryColor: #424242;
 $secondaryColorDark: #6D6D6D;
