--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -78,9 +78,47 @@
 
 .container_modal input {
   width: 100%;
+  margin-bottom: 5px;
+}
+
+.container_modal input:last-of-type {
+  margin-bottom: 0;
 }
 
 .ReactModal__Overlay {
   background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
+/* Modal Form */
+.row_new-note-form-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 25px;
+}
+
+.row_new-note-form-buttons div {
+  -webkit-transition: .5s;
+  transition: .5s;
+  width: 200px;
+  background-color: #E00045;
+  border: 1px solid #E00045;
+  color: rgba(255, 255, 255, 0.95);
+  font-weight: 600;
+  font-size: 1.25rem;
+  text-align: center;
+  padding: 12px 24px;
+  border-radius: 5px;
+}
+
+.row_new-note-form-buttons div:hover {
+  cursor: pointer;
+  -webkit-transition: .5s;
+  transition: .5s;
+  background-color: #ffffff;
+  color: #E00045;
 }
 /*# sourceMappingURL=style.css.map */
