--- a/client/src/styles/main-view/_modal.scss
+++ b/client/src/styles/main-view/_modal.scss
@@ -3,10 +3,18 @@
   padding: 12px 24px;
   input {
     width: 100%;
-    margin-bottom: 5px;
-    &:last-of-type {
-      margin-bottom: 0;
-    }
+    margin-bottom: 10px;
+    padding: 4px 6px;
+    font-size: 1.25rem;
+  }
+  .input_note {
+    height: 100px;
+    width: 100%;
+    padding: 4px 6px;
+    font-size: 1.25rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   }
 }
 
@@ -15,12 +23,10 @@
 }
 
 /* Modal Form */
-
-
 .row_new-note-form-buttons {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 25px;
+  margin-top: 10px;
 
   div {
     transition: .5s;
