can now find one and update

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -50,6 +50,16 @@ a:-webkit-any-link {
   font-size: 2rem;
   color: #474747;
   padding-left: 15px;
+  border-color: transparent;
+  -webkit-transition: .5s;
+  transition: .5s;
+  width: 100%;
+}
+
+.header__single-note:hover {
+  border-color: #b9b9b9;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .subheader__single-note {
@@ -58,12 +68,22 @@ a:-webkit-any-link {
   padding: 15px;
   border-bottom: 1px solid #474747;
   margin-bottom: 15px;
+  border-color: transparent;
+  -webkit-transition: .5s;
+  transition: .5s;
+  width: 100%;
+}
+
+.subheader__single-note:hover {
+  border-color: #b9b9b9;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .text__single-note {
   font-size: 1.25rem;
-  padding-left: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  padding: 12px 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   height: 450px;
   border-color: transparent;
   -webkit-transition: .5s;
@@ -169,6 +189,44 @@ a:-webkit-any-link {
   display: grid;
   -ms-grid-columns: 200px auto;
       grid-template-columns: 200px auto;
+}
+
+.container__update-buttons {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 33% 33% 33%;
+      grid-template-columns: 33% 33% 33%;
+  width: 50%;
+  margin-bottom: 15px;
+  padding-left: 15px;
+}
+
+.container__update-buttons div {
+  padding: 6px 8px;
+  text-align: center;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.container__update-buttons div:hover {
+  cursor: pointer;
+  -webkit-transition: .5s;
+  transition: .5s;
+  background-color: #ffb5c1;
+}
+
+.container__update-buttons a {
+  padding: 6px 8px;
+  text-align: center;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.container__update-buttons a:hover {
+  cursor: pointer;
+  -webkit-transition: .5s;
+  transition: .5s;
+  background-color: #ffb5c1;
 }
 
 .form_update-note {
