--- a/client/src/styles/global/_text.scss
+++ b/client/src/styles/global/_text.scss
@@ -1,4 +1,3 @@
-
 .header_notes-list {
   font-size: 1.75rem;
   font-weight: 800;
@@ -17,6 +16,13 @@
   font-size: 2rem;
   color: #474747;
   padding-left: 15px;
+  border-color: transparent;
+  transition: .5s;
+  width: 100%;
+  &:hover {
+    border-color: #b9b9b9;
+    transition: .5s;
+  }
 }
 
 .subheader__single-note {
@@ -25,14 +31,19 @@
   padding: 15px;
   border-bottom: 1px solid #474747;
   margin-bottom: 15px;
+  border-color: transparent;
+  transition: .5s;
+  width: 100%;
+  &:hover {
+    border-color: #b9b9b9;
+    transition: .5s;
+  }
 }
 
 .text__single-note {
   font-size: 1.25rem;
-  padding-left: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  padding: 12px 15px ;
+  font-family: $primaryFontFamily;
   height: 450px;
   border-color: transparent;
   transition: .5s;
