--- a/client/src/styles/single-note-view/_single-note.scss
+++ b/client/src/styles/single-note-view/_single-note.scss
@@ -3,7 +3,38 @@
   grid-template-columns: 200px auto;
 }
 
+.container__update-buttons {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  width: 50%;
+  margin-bottom: 15px;
+  padding-left: 15px;
+
+  div {
+    padding: 6px 8px;
+    text-align: center;
+    transition: .5s;
+    &:hover {
+      cursor: pointer;
+      transition: .5s;
+      background-color: $primaryColorLight;
+    }
+  }
+
+  a {
+    padding: 6px 8px;
+    text-align: center;
+    transition: .5s;
+    &:hover {
+      cursor: pointer;
+      transition: .5s;
+      background-color: $primaryColorLight;
+    }
+  }
+}
+
 .form_update-note {
   width: 100%;
   margin-right: 15px;
 }
+
