--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .container_notes-list {
   width: 75%;
   margin: 25px auto;
@@ -267,5 +272,96 @@ a:-webkit-any-link {
   -webkit-transition: .5s;
   transition: .5s;
   background-color: #ffb5c1;
+}
+
+.container_form-login_newUser {
+  width: 50%;
+  min-width: 500px;
+  min-height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #ffb5c1;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 10%;
+  padding: 25px 15px;
+  border-radius: 5px;
+}
+
+.container_form-login_newUser h1 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 400px;
+  text-align: center;
+}
+
+.container-buttons_form-login_newUser {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.form-login_newUser {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 75%;
+  min-width: 300px;
+  margin: auto;
+}
+
+.form-login_newUser input {
+  width: 100%;
+  padding: 6px 8px;
+  margin-bottom: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.25rem;
+}
+
+.form-login_newUser button, .form-login_newUser .button_form-login_newUser {
+  width: 45%;
+  padding: 6px 8px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  text-align: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background-color: rgba(255, 255, 255, 0.05);
+  color: rgba(0, 0, 0, 0.85);
+  border-radius: 5px;
+  font-size: 1.25rem;
+  border-width: 2px;
+  border-color: #A6001F;
+  border-style: outset;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.form-login_newUser button:hover, .form-login_newUser .button_form-login_newUser:hover {
+  cursor: pointer;
+  -webkit-transition: .5s;
+  transition: .5s;
+  background-color: #E00045;
+  color: rgba(255, 255, 255, 0.95);
+  border-color: #A6001F;
 }
 /*# sourceMappingURL=style.css.map */
