--- a/client/src/styles/main-view/_grid.scss
+++ b/client/src/styles/main-view/_grid.scss
@@ -3,3 +3,19 @@
   grid-template-columns: 50% 25% 25%;
   gap: 10px;
 }
+
+// IF THERE ARE NO NOTES TO SHOW
+
+.no-notes-container {
+  text-align: center;
+  margin: 0 auto 2.5rem auto;
+  width: 75%;
+  & h1 {
+    line-height: 3.5;
+    margin-block-end: 0 !important;
+  }
+  & p {
+    font-size: 1.25rem;
+  }
+
+}
