added box-shadow to key visual elements

--- a/client/src/styles/global/_buttons.scss
+++ b/client/src/styles/global/_buttons.scss
@@ -11,6 +11,8 @@
   margin-right: auto;
   transition: .5s;
   font-size: 1.5rem;
+  box-shadow: 4px 6px .5rem #c8c8c8;
+
   &:hover {
     cursor: pointer;
     transition: .5s;
