--- a/client/src/styles/login_newUser/_login_newUser.scss
+++ b/client/src/styles/login_newUser/_login_newUser.scss
@@ -10,6 +10,7 @@
   margin-top: 10%;
   padding: 25px 15px;
   border-radius: 5px;
+  box-shadow: 6px 10px .5rem #c8c8c8;
 
   h1 {
     align-self: center;
