--- a/client/src/styles/login_newUser/_login_newUser.scss
+++ b/client/src/styles/login_newUser/_login_newUser.scss
@@ -59,7 +59,7 @@
       cursor: pointer;
       transition: .5s;
       background-color: $primaryColor;
-      color: rgba(255, 255, 255, 0.95);
+      color: rgba(255, 255, 255, 0.95) !important;
       border-color: $primaryColorDark;
     }
   }
