--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -405,7 +405,7 @@ a:-webkit-any-link {
   -webkit-transition: .5s;
   transition: .5s;
   background-color: #E00045;
-  color: rgba(255, 255, 255, 0.95);
+  color: rgba(255, 255, 255, 0.95) !important;
   border-color: #A6001F;
 }
 
