added new navbar

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -25,3 +25,4 @@ a:-webkit-any-link {
 @import './main-view/modal';
 @import './single-note-view/single-note';
 @import './login_newUser/login_newUser';
+@import './global/navbar';
