--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -418,4 +418,35 @@ a:-webkit-any-link {
   padding: .25rem !important;
   width: 30px;
 }
+
+.container_nav-bar {
+  padding: 8px 12px;
+  background-color: #E00045;
+  color: white;
+  position: relative;
+  z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 64px;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.container_nav-bar a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav-logo {
+  max-height: 44px;
+}
+
+.nav-brand-header {
+  margin-left: 15px;
+  font-size: 1.65em;
+}
 /*# sourceMappingURL=style.css.map */
