--- a/client/src/styles/global/_navbar.scss
+++ b/client/src/styles/global/_navbar.scss
@@ -1,5 +1,5 @@
 .container_nav-bar {
-  // width: 100%;
+  width: 100%;
   padding: 8px 12px;
   background-color: $primaryColor;
   color: white;
@@ -24,4 +24,18 @@
 .nav-brand-header {
   margin-left: 15px;
   font-size: 1.65em;
+}
+
+.right-side_nav-bar {
+  margin-left: auto;
+  margin-right: 15px;
+  padding: 8px 12px;
+  transition: .5s;
+  
+  &:hover{
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 97%);
+    color: $primaryColor;
+    transition: .5s;
+  }
 }
