--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -322,8 +322,8 @@ a:-webkit-any-link {
 }
 
 .container_form-login_newUser {
-  width: 50%;
-  min-width: 500px;
+  width: 40%;
+  min-width: 400px;
   min-height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -387,7 +387,6 @@ a:-webkit-any-link {
 }
 
 .form-login_newUser button, .form-login_newUser .button_form-login_newUser {
-  width: 45%;
   padding: 6px 8px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   text-align: center;
@@ -414,12 +413,17 @@ a:-webkit-any-link {
   border-color: #A6001F;
 }
 
+.form-login_newUser button {
+  width: 100%;
+}
+
 .alert-dismissible .close {
   padding: .25rem !important;
   width: 30px;
 }
 
 .container_nav-bar {
+  width: 100%;
   padding: 8px 12px;
   background-color: #E00045;
   color: white;
@@ -448,5 +452,21 @@ a:-webkit-any-link {
 .nav-brand-header {
   margin-left: 15px;
   font-size: 1.65em;
+}
+
+.right-side_nav-bar {
+  margin-left: auto;
+  margin-right: 15px;
+  padding: 8px 12px;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.right-side_nav-bar:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #E00045;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 /*# sourceMappingURL=style.css.map */
