--- a/client/src/styles/login_newUser/_login_newUser.scss
+++ b/client/src/styles/login_newUser/_login_newUser.scss
@@ -75,3 +75,18 @@
   padding: .25rem !important;
   width: 30px;
 }
+
+
+@media only screen and (max-width: 415px) {
+
+  .container_form-login_newUser {
+    min-width: 350px;
+    h1 {
+      font-size: 2rem;
+      padding: 0 0 20px 0;
+    }
+  }
+
+
+
+}
