--- a/client/src/styles/main-view/_modal.scss
+++ b/client/src/styles/main-view/_modal.scss
@@ -48,3 +48,20 @@
   }
 
 }
+
+@media only screen and (max-width: 415px) {
+  .container_modal {
+    min-width: 325px;
+    padding: 0;
+    .input_note {
+      height: 250px;
+    }
+  }
+
+  .row_new-note-form-buttons {
+    div {
+      width: 100px;
+      padding: 8px 12px;
+    }
+  }
+}
