--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -3,12 +3,6 @@
           box-sizing: border-box;
 }
 
-.container_notes-list {
-  width: 75%;
-  margin: 25px auto;
-  padding: 20px 0;
-}
-
 a:-webkit-any-link {
   color: inherit !important;
   cursor: pointer;
@@ -41,16 +35,12 @@ a:-webkit-any-link {
   background-color: #ffffff;
 }
 
-.header_notes-list {
-  font-size: 1.75rem;
-  font-weight: 800;
-  padding-left: 15px;
-}
-
-.header__sortable-lists {
-  font-size: 1.5rem;
-  color: #474747;
-  padding-left: 15px;
+@media only screen and (max-width: 415px) {
+  .add-new-note__btn {
+    width: 75%;
+    padding: 10px 0;
+    font-size: 1.25rem;
+  }
 }
 
 .header__single-note {
@@ -102,6 +92,32 @@ a:-webkit-any-link {
   transition: .5s;
 }
 
+.container_notes-list {
+  width: 75%;
+  margin: 25px auto;
+  padding: 20px 0;
+}
+
+.row_notes-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 25% 25%;
+      grid-template-columns: 50% 25% 25%;
+  gap: 10px;
+}
+
+.header_notes-list {
+  font-size: 1.75rem;
+  font-weight: 800;
+  padding-left: 15px;
+}
+
+.header__sortable-lists {
+  font-size: 1.5rem;
+  color: #474747;
+  padding-left: 15px;
+}
+
 .notes-list-results {
   font-size: 1.25rem;
   line-height: 2.5rem;
@@ -125,14 +141,6 @@ a:-webkit-any-link {
   text-transform: capitalize;
 }
 
-.row_notes-list {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 50% 25% 25%;
-      grid-template-columns: 50% 25% 25%;
-  gap: 10px;
-}
-
 .no-notes-container {
   text-align: center;
   margin: 0 auto 2.5rem auto;
@@ -147,6 +155,35 @@ a:-webkit-any-link {
 
 .no-notes-container p {
   font-size: 1.25rem;
+}
+
+@media only screen and (max-width: 415px) {
+  .container_notes-list {
+    width: 100%;
+    padding: 0 15px;
+  }
+  .row_notes-list {
+    -ms-grid-columns: 46% 29% 25%;
+        grid-template-columns: 46% 29% 25%;
+    gap: 15px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .header_notes-list {
+    display: none;
+  }
+  .header__sortable-lists {
+    font-size: .8rem;
+    padding-left: 0;
+  }
+  .notes-list-results {
+    font-size: 1rem;
+    padding-left: 0;
+  }
+  .notes-list-results div {
+    padding-left: 0;
+  }
 }
 
 .container_modal {
@@ -204,6 +241,20 @@ a:-webkit-any-link {
   transition: .5s;
   background-color: #ffffff;
   color: #E00045;
+}
+
+@media only screen and (max-width: 415px) {
+  .container_modal {
+    min-width: 325px;
+    padding: 0;
+  }
+  .container_modal .input_note {
+    height: 250px;
+  }
+  .row_new-note-form-buttons div {
+    width: 100px;
+    padding: 8px 12px;
+  }
 }
 
 .container_single-note-main-window {
@@ -305,6 +356,10 @@ a:-webkit-any-link {
   margin-right: 10px;
 }
 
+.mobile-container__single-note-left-col {
+  display: none;
+}
+
 .row__left-column-list {
   width: 100%;
   padding: 6px 0px;
@@ -319,6 +374,46 @@ a:-webkit-any-link {
   -webkit-transition: .5s;
   transition: .5s;
   background-color: #ffb5c1;
+}
+
+@media only screen and (max-width: 415px) {
+  .container_single-note-main-window {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: none;
+        grid-template-columns: none;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+  }
+  .container__single-note-left-col {
+    display: none;
+  }
+  .mobile-container__single-note-left-col {
+    display: block;
+    height: 45px;
+  }
+  .mobile-container__top-event-row {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+  }
+  .mobile-container__top-event-row .add-new-note__btn {
+    font-size: 1rem;
+  }
+  .mobile-container__top-event-row .btn-primary {
+    background-color: #E00045;
+    margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    font-size: 1rem;
+    padding: 10px 0;
+    width: 75%;
+  }
+  .mobile-container__top-event-row .dropdown-item {
+    padding: .4rem 1.5rem;
+  }
 }
 
 .container_form-login_newUser {
@@ -422,6 +517,16 @@ a:-webkit-any-link {
   width: 30px;
 }
 
+@media only screen and (max-width: 415px) {
+  .container_form-login_newUser {
+    min-width: 350px;
+  }
+  .container_form-login_newUser h1 {
+    font-size: 2rem;
+    padding: 0 0 20px 0;
+  }
+}
+
 .container_nav-bar {
   width: 100%;
   padding: 8px 12px;
@@ -468,5 +573,14 @@ a:-webkit-any-link {
   color: #E00045;
   -webkit-transition: .5s;
   transition: .5s;
+}
+
+@media only screen and (max-width: 415px) {
+  .nav-brand-header {
+    font-size: 1.45em;
+  }
+  .right-side_nav-bar {
+    margin-right: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
