--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -4,7 +4,6 @@
 }
 
 a:-webkit-any-link {
-  color: inherit !important;
   cursor: pointer;
   text-decoration: none !important;
 }
@@ -245,7 +244,7 @@ a:-webkit-any-link {
 
 @media only screen and (max-width: 415px) {
   .container_modal {
-    min-width: 325px;
+    min-width: 300px;
     padding: 0;
   }
   .container_modal .input_note {
@@ -517,9 +516,38 @@ a:-webkit-any-link {
   width: 30px;
 }
 
+.login-hr {
+  border-top: 1px solid #000000;
+  width: 100%;
+  margin-top: 24px;
+  margin-bottom: 0;
+}
+
+.text_forgot-password {
+  color: #A6001F;
+  text-align: center;
+  padding: 12px 8px;
+  margin: 6px 0;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.text_forgot-password:hover {
+  color: #E00045;
+  background-color: rgba(255, 255, 255, 0.25);
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.text_forgot-password-success {
+  color: #A6001F;
+  text-align: center;
+  margin-top: 24px;
+}
+
 @media only screen and (max-width: 415px) {
   .container_form-login_newUser {
-    min-width: 350px;
+    min-width: 300px;
   }
   .container_form-login_newUser h1 {
     font-size: 2rem;
@@ -533,7 +561,7 @@ a:-webkit-any-link {
   background-color: #E00045;
   color: white;
   position: relative;
-  z-index: 99;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
