--- a/client/src/styles/single-note-view/_single-note.scss
+++ b/client/src/styles/single-note-view/_single-note.scss
@@ -53,12 +53,14 @@
   }
   
   a {
+    color: inherit;
     padding: 6px 8px;
     width: 100px;
     text-align: center;
     transition: .5s;
     &:hover {
       cursor: pointer;
+      color: inherit;
       transition: .5s;
       background-color: $primaryColorLight;
     }
@@ -82,13 +84,16 @@
 }
 
 .row__left-column-list {
+  color: inherit;
   width: 100%;
   padding: 6px 0px;
+  padding-left: 6px;
   font-size: 0.8rem;
   transition: .5s;
   border-bottom: 1px solid #dcdcdc;
   &:hover {
     cursor: pointer;
+    color: inherit;
     transition: .5s;
     background-color: $primaryColorLight;
   }
