--- a/client/src/styles/login_newUser/_login_newUser.scss
+++ b/client/src/styles/login_newUser/_login_newUser.scss
@@ -103,10 +103,11 @@
 @media only screen and (max-width: 415px) {
 
   .container_form-login_newUser {
-    min-width: 300px;
+    min-width: 90%;
     h1 {
       font-size: 2rem;
       padding: 0 0 20px 0;
+      width: 100%;
     }
   }
 
