--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -184,9 +184,11 @@ a:-webkit-any-link {
     padding: 0 15px;
   }
   .row_notes-list {
-    -ms-grid-columns: 46% 29% 25%;
-        grid-template-columns: 46% 29% 25%;
+    -ms-grid-columns: 46% 29% 20%;
+        grid-template-columns: 46% 29% 20%;
     gap: 15px;
+  }
+  .row_notes-list div {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -574,11 +576,12 @@ a:-webkit-any-link {
 
 @media only screen and (max-width: 415px) {
   .container_form-login_newUser {
-    min-width: 300px;
+    min-width: 90%;
   }
   .container_form-login_newUser h1 {
     font-size: 2rem;
     padding: 0 0 20px 0;
+    width: 100%;
   }
 }
 
