--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -455,7 +455,8 @@ a:-webkit-any-link {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #ffb5c1;
+  background-color: #ffffff;
+  border: 2px solid #c8c8c8;
   margin-right: auto;
   margin-left: auto;
   margin-top: 10%;
@@ -516,8 +517,8 @@ a:-webkit-any-link {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  background-color: rgba(255, 255, 255, 0.05);
-  color: rgba(0, 0, 0, 0.85);
+  background-color: #E00045;
+  color: rgba(255, 255, 255, 0.95);
   border-radius: 5px;
   font-size: 1.25rem;
   border-width: 2px;
@@ -531,8 +532,8 @@ a:-webkit-any-link {
   cursor: pointer;
   -webkit-transition: .5s;
   transition: .5s;
-  background-color: #E00045;
-  color: rgba(255, 255, 255, 0.95) !important;
+  background-color: #ffffff;
+  color: #E00045 !important;
   border-color: #A6001F;
 }
 
@@ -553,7 +554,7 @@ a:-webkit-any-link {
 }
 
 .text_forgot-password {
-  color: #A6001F;
+  color: #E00045;
   text-align: center;
   padding: 12px 8px;
   margin: 6px 0;
@@ -562,7 +563,7 @@ a:-webkit-any-link {
 }
 
 .text_forgot-password:hover {
-  color: #E00045;
+  color: #A6001F;
   background-color: rgba(255, 255, 255, 0.25);
   -webkit-transition: .5s;
   transition: .5s;
