sliiiiiiight change to background color for login deck

--- a/client/src/styles/login_newUser/_login_newUser.scss
+++ b/client/src/styles/login_newUser/_login_newUser.scss
@@ -4,7 +4,7 @@
   min-height: 200px;
   display: flex;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: #fbfbfb;
   border: 2px solid #c8c8c8;
   margin-right: auto;
   margin-left: auto;
