--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -455,7 +455,7 @@ a:-webkit-any-link {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #ffffff;
+  background-color: #fbfbfb;
   border: 2px solid #c8c8c8;
   margin-right: auto;
   margin-left: auto;
