--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -9,6 +9,19 @@ a:-webkit-any-link {
   text-decoration: none !important;
 }
 
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 600ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+  opacity: 0;
+}
+
 
 
 
